--- a/style.css
+++ b/style.css
@@ -4,58 +4,25 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Roboto, sans-serif;
-
-}
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 350px;
-    padding-right: 350px;
-
 }
 
 .header-hero-wrapper { 
     background-color: #1F2937;
     padding-bottom: 20px;
 }
-
-h1 {
-    color: white;
-    font-size: 48px;
-    font-weight: 900;
-    width: 400px;
-    margin-bottom: 0px;
-    
+.header {
+    display: flex;
+    justify-content: space-between;
+    max-width: 900px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 20px;
+}
    
-}
-
-.hero-text {
-    color: #E5E7EB;
-    font-size: 18px;
-    width: 400px;
-    
-
-}
-
-button {
-    font-family: Roboto, sans-serif;
-    border: black;
-    border-radius: 7px;
-    background: #3882f6;
-    color: white;
-    font-weight: bold;
-    font-weight: 60px;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 8px;
-    padding-bottom: 8px;
-   
-}
-
 a {
     text-decoration: none;
     color: #E5E7EB;
+    
 }
 
 ul {
@@ -69,21 +36,165 @@ ul {
 .hero {
     display: flex;
     justify-content: center;
-    margin: 100px;
-    margin-left: 400px;
-    margin-right: 400px;
+    gap: 20px;
+    max-width: 900px;
+    width: 100%;
+    margin: 50px auto;
+    padding: 20px;
 }
 
 .hero-card {
-    align-self: center;
-    margin-right: 20px;
+    max-width: 400px;
+}
+
+h1 {
+    color: white;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 10px;
+}
+
+.hero-text {
+    color: #E5E7EB;
+    font-size: 18px;
+    width: 400px;
+
+}
+
+.hero-button {
+    font-family: Roboto, sans-serif;
+    border: none;
+    border-radius: 7px;
+    background: #3882f6;
+    color: white;
+    font-weight: bold;
+    padding: 8px 30px;
 }
 
 .hero-image {
-    margin-top: 40px;
+    width: 100%;
+    max-width: 400px;
 }
 
-/* img goes here */
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    padding: 10px;
+}
+
+.information-section {
+   display: flex;
+   justify-content: center; 
+   text-align: center;  
+   gap: 20px;
+   padding: 100px;
+   padding-top: 0;
+    
+}
+
+.card img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px;
+    padding-bottom: 10px;
+
+}
+
+.text {
+    width: 200px;
+}
+
+.quote { 
+   background-color: #E5E7EB;
+    padding-top:  40px;
+    padding-bottom: 40px;
+    padding-left: 230px;
+    padding-right: 230px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0;
+}
+
+p.quote-text { 
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 200;
+    margin-bottom: 10px;
+}
+
+.quote-speaker {
+    padding-top: 0;
+    margin: 0%;
+    text-align: right;
+    font-weight: bold;
+}
+
+.call-to-action-section {
+    
+    background-color: #3882f6;
+    border-radius: 9px;
+    margin: 100px 400px ;
+    padding: 20px 0;
+}
+
+.call-to-action {
+    display: flex;
+    padding: 22px;
+    justify-content: space-around;
+}
+
+.call-to-action-button {
+    font-family: Roboto, sans-serif;
+    border: white;
+    border-radius: 7px;
+    background: #3882f6;
+    color: white;
+    font-weight: bold;
+    padding: 8px 30px;
+
+}
+
+h4 {
+    color: white;
+
+}
+
+.call-to-action-text {
+    color: #E5E7EB;
+    font-weight: 300;
+    font-size: smaller;
+}
+
+button.call-to-action-button {
+    border: #E5E7EB;
+    border-style: solid;
+    padding: 8px 10px;
+    width: 100px;
+    
+}
+
+
+h4, p.call-to-action-text, .call-to-action-button {
+    padding: 0;
+    margin: 0;
+
+}
+
+footer {
+    background-color: #1F2937;
+    color: #E5E7EB;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+
+
 
 
 
